@@ -30,7 +30,8 @@
 #define CONFIG_FILE_INBAND      0x01
 #define CONFIG_FILE_OUTOFBAND   0x02
 #define CONFIG_FILE_SDR         0x04
-#define CONFIG_FILE_HOSTRANGE   0x08
+#define CONFIG_FILE_TIME        0x08
+#define CONFIG_FILE_HOSTRANGE   0x10
 
 #define CONFIG_FILE_TOOL_NONE                0x00000000
 #define CONFIG_FILE_TOOL_BMC_CONFIG          0x00000001
