@@ -71,6 +71,15 @@
 #
 #####################################################################################################
 #
+# TIME OPTIONS
+#
+# The following options are specific to tools that may output time
+# values.  They will be ignored by all other tools.
+#
+# utc-to-localtime DISABLE
+#
+#####################################################################################################
+#
 # HOSTRANGED OPTIONS
 #
 # The following options are specific to tools that support hostranged
