@@ -138,6 +138,14 @@ Specify if cache creation/deletion information should not be output by default.
 \fBsdr\-cache\-directory\fR \fIDIRECTORY\fR
 Specify the default sdr cache directory to use.
 
+.SH "TIME OPTIONS"
+The following options are specific to tools that may output time
+values.  They will be ignored by all other tools.
+.TP
+\fButc\-to\-localtime\fR \fIENABLE|DISABLE\fR 
+\fBquiet\-cache\fR \fIENABLE|DISABLE\fR
+Specify if time should be converted from assumed UTC to localtime by default.
+
 .SH "HOSTRANGED OPTIONS"
 The following options are specific to tools that support hostranged
 output.  They will be ignored by all other tools.
